...
  File? _img;

  // Fallback User Data (if API fails)
  static const _fallbackUserData = {
    'username': 'Manisha',
    'contactNo': '9876543210',
    'email': 'manisha@gmail.com',
    'image': 'assets/images/profile-placeholder.png'
  };

  @override
  void initState() {
    super.initState();
...
