...
                  ),
                ),
                _buildTextField(
                  controller: _usernameController,
                  hintText: 'Enter your Username',
                  validator: (value) =>
                      value!.isEmpty ? 'Username is required' : null,
                ),
                _buildTextField(
                  controller: _emailController,
                  hintText: 'Enter your Email',
                  validator: (value) => value!.contains('@')
                      ? null
...
